# hunger_games

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  run_all_task.py  run_all_tasks.py
hunger_games/: __init__.py  task_a.py  task_b.py  task_c.py  task_d.py  task_e.py  task_f.py  task_test_cases.py
tests/: test_task_a.py  test_task_b.py  test_task_c.py  test_task_d.py  test_task_e.py
