[tool.poetry]
name = "hunger-games"
version = "0.1.0"
description = ""
authors = ["vova2092 <vovai2092@yandex.ru>"]
readme = "README.md"
packages = [{include = "hunger_games"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
pytest = "^7.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
